<resources>
    <string name="app_name">Tube +243</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="about_title">A Propos de Nous</string>
    <string name="contact_title">Nous Contacter</string>
    <string name="text_about_container">Tube+243 est une plateforme, qui vous permet de rechercher et de télécharger gratuitement les tubes de vos tops artistes musiciens Congolais, et bien plus encore.\n\nVersion 1.0</string>
    <string name="tube_243">Tube+243</string>
    <string name="text_contact_container">We are here to answer all your questions. So, please contact us via:</string>
    <string name="text_desktop_container">Nous vous invitons à suivre notre émission intitulée : Tube +243 sur la chaîne Soli TV\ndont les coordonnées vous sont presentées ci-dessous:\n</string>
    <string name="connexion">Connexion</string>
    <string name="lastname">Nom</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="search">Recherche ici …</string>
    <string name="title_activity_media_player">MediaPlayerActivity</string>
    <string name="phone_number">Phone number</string>
    <string name="code">Code</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="about">About</string>
    <string name="tv">TV</string>
    <string name="contact">Contact</string>
    <string name="send_text">Send text</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="welcome_text">Le nouveau monde de la musique Congolaise</string>
    <string name="init_time">00:00</string>
    <string name="tube_image_shared">tube_image_shared</string>

    <!-- Dialog Profile -->
    <string name="dialog_profile_title">Profile</string>

</resources>
