<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.LinearLayoutCompat
        android:paddingTop="56dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatImageView
            android:src="@mipmap/app_launcher"
            android:layout_gravity="center"
            android:background="#fff"
            android:layout_width="150dp"
            android:layout_marginBottom="25dp"
            android:layout_height="150dp" />

        <Spinner
            android:id="@+id/country_list"
            android:spinnerMode="dialog"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"/>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_marginBottom="50dp"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:clickable="false"
                android:inputType="none"
                android:id="@+id/country_code"
                android:layout_width="75dp"
                android:hint="@string/code"
                android:enabled="false"
                android:gravity="center"
                android:textColorHint="#5b5a5a"
                android:textColor="#000"
                android:textSize="18sp"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/phone_number"
                android:hint="@string/phone_number"
                android:gravity="center"
                android:textColorHint="#000"
                android:textColor="#000"
                android:textSize="18sp"
                android:layout_width="250dp"
                android:maxLength="9"
                android:layout_height="wrap_content"
                android:inputType="phone"/>

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatButton
            android:background="#d7011b"
            android:id="@+id/btnConnect"
            android:textColor="#fff"
            android:text="@string/connexion"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.LinearLayoutCompat>
</ScrollView>
